# bitnet-mnist

./: .gitignore  README.md  analyze_dit.py  benchmark.py  benchmark_triton_dit.py  bitnet_diffusion.py  bitnet_mnist.py  bitnet_packed.py  full_pipeline.py  pyproject.toml
.github/workflows/: ci.yml
