[project]
name = "bitnet-mnist"
version = "0.1.0"
description = "BitNet b1.58 MNIST implementation for testing"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "triton>=2.0.0",
    "bitnet-triton",
    "tqdm>=4.0.0",
]

[tool.uv.sources]
bitnet-triton = { path = "../bitnet-triton", editable = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
